--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -68,26 +68,53 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hl9-97-H4F">
-                                <rect key="frame" x="98" y="130" width="65" height="30"/>
+                                <rect key="frame" x="36" y="217" width="65" height="30"/>
                                 <state key="normal" title="hookah"/>
                                 <connections>
                                     <segue destination="gF8-28-OA7" kind="show" identifier="hookahSegueID" id="TPR-zs-HAH"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7pt-iJ-pEs">
-                                <rect key="frame" x="107" y="421" width="46" height="30"/>
+                                <rect key="frame" x="45" y="323" width="46" height="30"/>
                                 <state key="normal" title="tea"/>
                                 <connections>
                                     <segue destination="gF8-28-OA7" kind="show" identifier="teaSegueID" id="yJ7-Z9-yI5"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YJH-ej-YLZ">
-                                <rect key="frame" x="94" y="262" width="72" height="30"/>
+                                <rect key="frame" x="32" y="275" width="72" height="30"/>
                                 <state key="normal" title="tobacco"/>
                                 <connections>
                                     <segue destination="gF8-28-OA7" kind="show" identifier="tobaccoSegueID" id="aT7-P9-lNn"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yz4-Nt-ayN">
+                                <rect key="frame" x="20" y="103" width="197" height="52"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xj-GD-ODW">
+                                        <rect key="frame" x="0.0" y="0.0" width="149" height="52"/>
+                                        <color key="backgroundColor" red="0.2901960784" green="0.6705882353" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Specials"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v1s-eO-pzn">
+                                        <rect key="frame" x="148" y="0.0" width="49" height="52"/>
+                                        <color key="backgroundColor" red="0.96078431369999995" green="0.43921568630000002" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="X"/>
+                                        <connections>
+                                            <action selector="specialsHideButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="vhd-cI-KTj"/>
+                                        </connections>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfE-l3-357">
+                                        <rect key="frame" x="148" y="0.0" width="49" height="52"/>
+                                        <color key="backgroundColor" red="1" green="0.74901960779999999" blue="0.43585526320000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="!"/>
+                                        <connections>
+                                            <action selector="specialsShowButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Ybd-iT-OyF"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -98,6 +125,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="specialsBackgroundView" destination="Yz4-Nt-ayN" id="3hP-qG-a3d"/>
+                        <outlet property="specialsButtonOutlet" destination="1xj-GD-ODW" id="SUI-wW-phf"/>
+                        <outlet property="specialsHideButtonOutlet" destination="v1s-eO-pzn" id="Ln8-qR-p2j"/>
+                        <outlet property="specialsShowButtonOutlet" destination="nfE-l3-357" id="77P-2K-Xh7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
